--- a/obstaravania/client/src/components/Navigation.css
+++ b/obstaravania/client/src/components/Navigation.css
@@ -2,8 +2,8 @@
   align-self: flex-start;
   width: 100%;
   margin-bottom: auto;
-
 }
+
 .navbar-header {
   float: none;
   background-color: inherit;
@@ -12,11 +12,12 @@
 .navbar-toggle {
   display: block;
   margin-right: 0;
+  padding-right: 0;
 }
 
 .navbar-brand {
   padding-left: 0;
-  padding-right: 10px;
+  padding-right: 0;
   font-family: 'Source Code Pro', monospace;
   color:  #333333;
   font-size: 14px;
@@ -34,6 +35,12 @@
 
 .navbar-collapse.collapse {
   display: none!important;
+}
+
+.navbar-collapse {
+  background-color: rgba(255, 255, 255, 0.95);
+  z-index: 2;
+  position: relative;
 }
 
 .navbar-nav {
